Fix assets visibility problem

--- a/InkHouse/styles/base/_typography.scss
+++ b/InkHouse/styles/base/_typography.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Raleway';
-    src: url('../../assets/fonts/Raleway-Medium.woff2') format('woff2');
+    src: url('../assets/fonts/Raleway-Medium.woff2') format('woff2');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: 'Raleway';
-    src: url('../../assets/fonts/Raleway-Regular.woff2') format('woff2');
+    src: url('../assets/fonts/Raleway-Regular.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
