--- a/InkHouse/styles/components/_promo.scss
+++ b/InkHouse/styles/components/_promo.scss
@@ -1,10 +1,9 @@
 .promo {
     margin: 70px auto;
-    // max-width: 1440px;
     width: 100%;
     height: 574px;
     padding: 70px clamp(var(--padding-x), 100%, calc(50% - 720px));
-    background: url("../../assets/images/promo_bg-l.png") center / cover no-repeat;
+    background: url("../assets/images/promo_bg-l.png") center / cover no-repeat;
     color: var(--color-on-primary);
 
     &__header {
@@ -59,13 +58,13 @@
 
     @include tablet {
         height: 502px;
-        background-image: url("../../assets/images/promo_bg-m.png");
+        background-image: url("../assets/images/promo_bg-m.png");
     }
 
     @include tablet-s {
         height: fit-content;
         padding: 50px var(--padding-x);
-        background-image: url("../../assets/images/promo_bg-s.png");
+        background-image: url("../assets/images/promo_bg-s.png");
     }
 
     @include mobile {
